--- a/en/index.html
+++ b/en/index.html
@@ -10,7 +10,7 @@
    <style>
     body{ font-family:Helvetica; }
     .il li{ display:inline;list-style-type:none; }
-    .jumbotron{ background:"#00FFFF";padding:320px; }
+    .jumbotron{ background:"#00FFFF";padding-top:320px;padding-bottom:320px; }
    </style>
   </head>
   <body>
