--- a/en/index.html
+++ b/en/index.html
@@ -11,6 +11,7 @@
     body{ font-family:Helvetica; }
     .il li{ display:inline;list-style-type:none; }
     .jumbotron{ background:"#00FFFF";padding-top:320px;padding-bottom:320px; }
+    .navbar{ background:"#B3FFFF"; }
    </style>
   </head>
   <body>
