--- a/en/index.html
+++ b/en/index.html
@@ -12,6 +12,8 @@
     .il li{ display:inline;list-style-type:none; }
     .jumbotron{ background:"#00FFFF";padding-top:320px;padding-bottom:320px; }
     .navbar{ background:"#B3FFFF"; }
+    .navbar-brand{ color:"#FFFFFF"; }
+    .navbar-nav:{ color:"#FFFFFF"; }
    </style>
   </head>
   <body>
