--- a/en/index.html
+++ b/en/index.html
@@ -26,7 +26,7 @@
     <nav class="navbar navbar-default navbar-fixed-top">
      <div class="container-fluid">
       <div class="navbar-header">
-       <a class="navbar-brand" href="https://evergenco.github.io/Business/en">EverGenCO | Official: English</a>
+       <a class="navbar-brand" href="https://evergenco.github.io/Business/en">EverGenCo | Official: English</a>
       </div>
      </div>
      <ul class="nav navbar-nav">
