--- a/en/index.html
+++ b/en/index.html
@@ -12,8 +12,6 @@
     .il li{ display:inline;list-style-type:none; }
     .jumbotron{ background:"#00FFFF";padding-top:320px;padding-bottom:320px; }
     .navbar{ background:"#B3FFFF"; }
-    .navbar-brand{ color:"#FFFFFF"; }
-    .navbar-nav:{ color:"#FFFFFF"; }
    </style>
   </head>
   <body>
@@ -26,7 +24,7 @@
     <nav class="navbar navbar-default navbar-fixed-top">
      <div class="container-fluid">
       <div class="navbar-header">
-       <a class="navbar-brand" href="https://evergenco.github.io/Business/en">EverGenCo | Official: English</a>
+       <a class="navbar-brand" href="https://evergenco.github.io/Business/en"><font color="#FFFFFF">EverGenCo | Official: English</font></a>
       </div>
      </div>
      <ul class="nav navbar-nav">
