--- a/en/index.html
+++ b/en/index.html
@@ -29,7 +29,7 @@
      </div>
      <ul class="nav navbar-nav">
       <li class="dropdown">
-       <a class="dropdown-toggle" data-toggle="dropdown" href="#">Finance</a>
+       <a class="dropdown-toggle" data-toggle="dropdown" href="#"><font color="#FFFFFF">Finance</font></a>
        <ul class="dropdown-menu">
         <li><p id="banking">Banking</p></li>
         <li><p id="investing">Investing</p></li>
