--- a/en/index.html
+++ b/en/index.html
@@ -24,12 +24,12 @@
     <nav class="navbar navbar-default navbar-fixed-top">
      <div class="container-fluid">
       <div class="navbar-header">
-       <a class="navbar-brand" href="https://evergenco.github.io/Business/en"><font color="#FFFFFF">EverGenCo | Official: English</font></a>
+       <a class="navbar-brand" href="https://evergenco.github.io/Business/en"><font color="#00CCCC">EverGenCo | Official: English</font></a>
       </div>
      </div>
      <ul class="nav navbar-nav">
       <li class="dropdown">
-       <a class="dropdown-toggle" data-toggle="dropdown" href="#"><font color="#FFFFFF">Finance</font></a>
+       <a class="dropdown-toggle" data-toggle="dropdown" href="#"><font color="#00CCCC">Finance</font></a>
        <ul class="dropdown-menu">
         <li><p id="banking">Banking</p></li>
         <li><p id="investing">Investing</p></li>
