--- a/en/index.html
+++ b/en/index.html
@@ -18,6 +18,7 @@
    <div class="jumbotron text-center">
     <div class="innerJumbo">
      <h1 id="jumboText"></h1>  
+     <div id="innerJumbo"></div>
     </div>
    </div>
    <div class="container">
