--- a/en/index.html
+++ b/en/index.html
@@ -43,7 +43,7 @@
    <script type="text/javascript">
     var bankPage = '<div>';bankPage += '</div>';
     var bankSel = '<div id="bankCarousel" class="carousel slide" data-ride="carousel">';bankSel += '<ol class="carousel-inicators">';bankSel += '<li data-target="#bankCarousel" data-slide-to="0" class="active"></li>';bankSel += '</ol>';bankSel += '<div class="carousel-inner" role="listbox">';bankSel += '<div class="item active">';bankSel += '<h1 id="bankMB"><font color="#B3FFFF">Minimum Banking</font></h1>';bankSel += '</div>';bankSel += '</div>';bankSel += '</div>';
-    var logIn = '<div>';logIn += '</div>';
+    var logIn = '<div>';logIn += '<h1><font color="#00FFFF">Log In To Banking Account</font></h1>';logIn += '</div>';
     document.getElementById("banking").addEventListener("click", function(){document.getElementById("divBody").innerHTML = bankPage;document.getElementById("jumboText").innerHTML = "Finance | Banking";document.getElementById("innerJumbo").innerHTML += bankSel;});
      document.getElementById("bankMB").addEventListener("click", function(){document.getElementById("divBody").innerHTML = logIn;});
    </script>
