--- a/en/index.html
+++ b/en/index.html
@@ -12,6 +12,11 @@
     .il li{ display:inline;list-style-type:none; }
     .jumbotron{ background:"#00FFFF";padding-top:320px;padding-bottom:240px; }
     .navbar{ background:"#B3FFFF"; }
+    .carousel-inner > .item > h1, 
+    .carousel-inner > .item > a > h1 {
+     width: 70%;
+     margin: auto;
+    }
    </style>
   </head>
   <body>
