--- a/en/index.html
+++ b/en/index.html
@@ -17,6 +17,7 @@
      width: 70%;
      margin: auto;
     }
+    .carousel-indicators li{ list-style-type:circle; }
    </style>
   </head>
   <body>
