--- a/en/index.html
+++ b/en/index.html
@@ -3,8 +3,8 @@
   <head>
    <title>EverGenCo | EGC</title>
    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
-   <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
+   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
    <script type="text/javascrip" src="https://www.gstatic.com/firebasejs/3.7.7/firebase.js"></script>
    <script>var config = {    apiKey: "AIzaSyCQw5l7W-r1aBt_1n9dePGpXj-FgmyDSq8",    authDomain: "evergenco-93c31.firebaseapp.com",    databaseURL: "https://evergenco-93c31.firebaseio.com",    projectId: "evergenco-93c31",    storageBucket: "evergenco-93c31.appspot.com",    messagingSenderId: "657664211832"  };  firebase.initializeApp(config);</script>
    <style>
@@ -48,10 +48,8 @@
    <div id="divBody"></div>
    <script type="text/javascript">
     var bankPage = '<div>';bankPage += '</div>';
-    var bankSel = '<div id="bankCarousel" class="carousel slide" data-ride="carousel">';bankSel += '<ol class="carousel-inicators">';bankSel += '<li data-target="#bankCarousel" data-slide-to="0" class="active"></li>';bankSel += '<li data-target="#bankCarousel" data-slide-to="1"></li>';bankSel += '<li data-target="#bankCarousel" data-slide-to="2"></li>';bankSel += '</ol>';bankSel += '<div class="carousel-inner" role="listbox">';bankSel += '<div class="item active">';bankSel += '<h1 id="bankMB"><font color="#B3FFFF">Minimum Banking</font></h1>';bankSel += '</div>';bankSel += '<div class="item">';bankSel += '<h1 id="bankLFM"><font color="#B3FFFF">Loan For Me</font></h1>';bankSel += '</div>';bankSel += '<div class="item">';bankSel += '<h1 id="bankCM"><font color="#B3FFFF">Check Mate</font></h1>';bankSel += '</div>';bankSel += '</div>';bankSel += '<a class="left carousel-control" href="#bankCarousel" role="button" data-slide="prev">';bankSel += '<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>';bankSel += '<span class="sr-only">Previous</span>';bankSel += "</a>";bankSel += '<a class="right carousel-control" href="#bankCarousel" role="button" data-slide="next">';bankSel += '<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>';bankSel += '<span class="sr-only">Next</span>';bankSel += "</a>";bankSel += '</div>';
-    var liPage = '<div>';liPage += '<h1><font color="#00FFFF">Log Into Your EGC Banking Account</font></h1>';liPage += '<div align="center">';liPage += '</div>';liPage += '</li>';
-    document.getElementById("banking").addEventListener("click", function(){document.getElementById("divBody").innerHTML = bankPage;document.getElementById("jumboText").innerHTML = "Finance | Banking";document.getElementById("innerJumbo").innerHTML += bankSel;});
-     document.getElementById("bankMB").addEventListener("click", function(){document.getElementById("divBody").innerHTML = liPage;});
+    var bankSel = '<iframe src="https://evergenco.github.io/Business/en/bank/carousel.html" frameborder="none"></iframe>';
+    document.getElementById("banking").addEventListener("click", function(){document.getElementById("jumboText").innerHTML = "Finance | Banking";document.getElementById("innerJumbo").innerHTML += bankSel;});
    </script>
   </body>
  </html>
