--- a/en/index.html
+++ b/en/index.html
@@ -48,8 +48,8 @@
    <div id="divBody"></div>
    <script type="text/javascript">
     var bankPage = '<div>';bankPage += '</div>';
-    var bankSel = '<iframe src="https://evergenco.github.io/Business/en/bank/carousel.html" frameborder="none"></iframe>';
-    document.getElementById("banking").addEventListener("click", function(){document.getElementById("jumboText").innerHTML = "Finance | Banking";document.getElementById("innerJumbo").innerHTML += bankSel;});
+    var bankSel = '<iframe src="https://evergenco.github.io/Business/en/bank/carousel.html" frameborder="none" id="bankFrame"></iframe>';
+    document.getElementById("banking").addEventListener("click", function(){document.getElementById("jumboText").innerHTML = "Finance | Banking";document.getElementById("innerJumbo").innerHTML += bankSel;document.getElementById("bankFrame").style.width = window.innerWidth;});
    </script>
   </body>
  </html>
