--- a/en/index.html
+++ b/en/index.html
@@ -49,7 +49,7 @@
    <script type="text/javascript">
     var bankPage = '<div>';bankPage += '</div>';
     var bankSel = '<iframe src="https://evergenco.github.io/Business/en/bank/carousel.html" frameborder="none" id="bankFrame"></iframe>';
-    document.getElementById("banking").addEventListener("click", function(){document.getElementById("jumboText").innerHTML = "Finance | Banking";document.getElementById("innerJumbo").innerHTML += bankSel;document.getElementById("bankFrame").style.width = window.innerWidth;});
+    document.getElementById("banking").addEventListener("click", function(){document.getElementById("jumboText").innerHTML = "Finance | Banking";document.getElementById("innerJumbo").innerHTML += bankSel;document.getElementById("bankFrame").style.width = window.innerWidth;document.getElementById("bankFrame").style.width = 400px;});
    </script>
   </body>
  </html>
