--- a/en/bankCarousel.html
+++ b/en/bankCarousel.html
@@ -7,6 +7,8 @@
    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
    <style>
     body{ background:#00FFFF; }
+    ol li{ display:block; }
+    ol{ float:left; }
    </style>
   </head>
   <body>
