--- a/en/bankCarousel.html
+++ b/en/bankCarousel.html
@@ -14,11 +14,13 @@
   <body>
    <div class="container">
     <div id="bankCarousel" class="carousel slide" data-ride="carousel">
-     <ol class="carousel-indicators">
-      <li data-target="#bankCarousel" data-slide-to="0" class="active"></li>
-      <li data-target="#bankCarousel" data-slide-to="1"></li>
-      <li data-target="#bankCarousel" data-slide-to="2"></li>
-     </ol>
+     <div>
+      <ol class="carousel-indicators">
+       <li data-target="#bankCarousel" data-slide-to="0" class="active"></li>
+       <li data-target="#bankCarousel" data-slide-to="1"></li>
+       <li data-target="#bankCarousel" data-slide-to="2"></li>
+      </ol>
+     <div>
      <div class="carousel-inner" role="listbox">
       <div class="item active">
        <h1><font color="#B3FFFF" id="bankSUN">Save Up Now</font></h1>
