--- a/en/bankCarousel.html
+++ b/en/bankCarousel.html
@@ -1,4 +1,4 @@
-<DOCTYPE! html>
+ <DOCTYPE! html>
  <html>
   <head>
    <title>BankCarousel | EGC:Banking</title>
@@ -20,7 +20,7 @@
        <li data-target="#bankCarousel" data-slide-to="1"></li>
        <li data-target="#bankCarousel" data-slide-to="2"></li>
       </ol>
-     <div>
+     </div>
      <div class="carousel-inner" role="listbox">
       <div class="item active">
        <h1><font color="#B3FFFF" id="bankSUN">Save Up Now</font></h1>
@@ -32,6 +32,12 @@
        <h1><font color="#B3FFFF" id="bankCAN">Check All National</font></h1>
       </div>
      </div>
+     <a class="left-carousel-control" href="#bankCarousel" role="button" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+     </a>
+     <a class="right-carousel-control" href="#bankCarousel" role="button" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+     </a>
     </div>
    </div>
   </body>
