--- a/en/bankCarousel.html
+++ b/en/bankCarousel.html
@@ -1,4 +1,4 @@
- <DOCTYPE! html>
+<DOCTYPE! html>
  <html>
   <head>
    <title>BankCarousel | EGC:Banking</title>
@@ -37,9 +37,11 @@
      </div>
      <a class="left-carousel-control" href="#bankCarousel" role="button" data-slide="prev">
       <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
      </a>
      <a class="right-carousel-control" href="#bankCarousel" role="button" data-slide="next">
       <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
      </a>
     </div>
    </div>
