--- a/en/bankCarousel.html
+++ b/en/bankCarousel.html
@@ -35,11 +35,11 @@
        <h1><font color="#B3FFFF" id="bankCAN">Check All National</font></h1>
       </div>
      </div>
-     <a class="left-carousel-control" href="#bankCarousel" role="button" data-slide="prev">
+     <a class="left carousel-control" href="#bankCarousel" role="button" data-slide="prev">
       <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
       <span class="sr-only">Previous</span>
      </a>
-     <a class="right-carousel-control" href="#bankCarousel" role="button" data-slide="next">
+     <a class="right carousel-control" href="#bankCarousel" role="button" data-slide="next">
       <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
       <span class="sr-only">Next</span>
      </a>
