--- a/en/bankCarousel.html
+++ b/en/bankCarousel.html
@@ -45,5 +45,16 @@
      </a>
     </div>
    </div>
+   <script type="text/javascript">
+    document.getElementById("bankSUN").addEventListener("click", function(){
+     window.open("https://evergenco.github.io/Business/en/Bank/sun.html", "_blank");
+    });
+    document.getElementById("bankLON").addEventListener("click", function(){
+     window.open("https://evergenco.github.io/Business/en/Bank/lon.html", "_blank");     
+    });
+    document.getElementById("bankCAN").addEventListener("click", function(){
+     window.open("https://evergenco.github.io/Business/en/Bank/can.html", "_blank");
+    });
+   </script>
   </body>
  </html>
